--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     </head>
     <body>
         <h1>Khirby's Recipes!</h1>
+        <ul>
+            <li><a href="./recipes/lumpia.html">Lumpia Recipe</a></li>
+        </ul>
     </body>
 </html>
