--- a/recipes/lumpia.html
+++ b/recipes/lumpia.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <h1>Khirby's Lumpia Recipe!</h1>
+        <img src="../images/lumpia.jpg" alt="Delicious Lumpia">
     </body>
 </html>
