--- a/recipes/lumpia.html
+++ b/recipes/lumpia.html
@@ -8,5 +8,11 @@
     <body>
         <h1>Khirby's Lumpia Recipe!</h1>
         <img src="../images/lumpia.jpg" alt="Delicious Lumpia">
+        <h2>Description</h2>
+        <p>
+            Lumpia is a traditional Filipino recipe for lumpia, or fried spring rolls.
+            They're made with paper-thin lumpia wrappers and filled with a savory mixture of ground pork, cabbage, and other vegetables. 
+            Serve lumpia as a side dish or appetizer with a sweet chili dipping sauce.
+        </p>
     </body>
 </html>
