--- a/recipes/lumpia.html
+++ b/recipes/lumpia.html
@@ -7,12 +7,30 @@
     </head>
     <body>
         <h1>Khirby's Lumpia Recipe!</h1>
-        <img src="../images/lumpia.jpg" alt="Delicious Lumpia">
-        <h2>Description</h2>
-        <p>
-            Lumpia is a traditional Filipino recipe for lumpia, or fried spring rolls.
-            They're made with paper-thin lumpia wrappers and filled with a savory mixture of ground pork, cabbage, and other vegetables. 
-            Serve lumpia as a side dish or appetizer with a sweet chili dipping sauce.
-        </p>
+            <img src="../images/lumpia.jpg" alt="Delicious Lumpia">
+            <h2>Description</h2>
+                <p>
+                    Lumpia is a traditional Filipino recipe for lumpia, or fried spring rolls.
+                    They're made with paper-thin lumpia wrappers and filled with a savory mixture of ground pork, cabbage, and other vegetables. 
+                    Serve lumpia as a side dish or appetizer with a sweet chili dipping sauce.
+                </p>
+            <h2>Ingredients</h2>
+                <ul>
+                    <li>1 tablespoon vegetable oil</li>
+                    <li>1 pound ground pork</li>
+                    <li>½ cup chopped onion</li>
+                    <li>2 cloves garlic, crushed</li>
+                    <li>½ cup minced carrots</li>
+                    <li>½ cup chopped green onions</li>
+                    <li>½ cup thinly sliced green cabbage</li>
+                    <li>2 tablespoons chopped fresh cilantro (Optional)</li>
+                    <li>1 teaspoon ground black pepper</li>
+                    <li>1 teaspoon salt</li>
+                    <li>1 teaspoon garlic powder</li>
+                    <li>1 teaspoon soy sauce</li>
+                    <li>30 lumpia wrappers</li>
+                    <li>2 cups vegetable oil for frying, or as needed</li>
+                </ul>
+
     </body>
 </html>
