Add homepage link in lumpia recipe

--- a/recipes/lumpia.html
+++ b/recipes/lumpia.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Khirby's Lumpia Recipe!</h1>
+            <a href="../index.html"><b>Back to Homepage</b></a>
             <img src="../images/lumpia.jpg" alt="Delicious Lumpia">
             <h2>Description</h2>
                 <p>
@@ -59,6 +60,5 @@
                         Serve immediately.
                     </li>
                 </ol>
-
     </body>
 </html>
