--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Khirby's Recipes!</h1>
+        <img src="./images/kirbycooking.png" alt="Kirby cooking">
         <ul>
             <li><a href="./recipes/lumpia.html">Lumpia Recipe</a></li>
         </ul>
