--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     </head>
     <body>
         <h1>Khirby's Recipes!</h1>
-        <img src="./images/kirbycooking.png" alt="Kirby cooking">
-        <ul>
-            <li><a href="./recipes/lumpia.html">Lumpia Recipe</a></li>
-        </ul>
+            <img src="./images/kirbycooking.png" alt="Kirby cooking">
+            <h2>List of Khirby's Recipes</h2>
+            <ul>
+                <li><a href="./recipes/lumpia.html">Lumpia Recipe</a></li>
+            </ul>
     </body>
 </html>
