--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <h2>List of Khirby's Recipes</h2>
             <ul>
                 <li><a href="./recipes/lumpia.html">Lumpia Recipe</a></li>
+                <li><a href="./recipes/burger.html">Burger Recipe</a></li>
             </ul>
     </body>
 </html>
