Add burger image to burger recipe page

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Khirby's Burger Recipe!</h1>
+            <img src="../images/burger.png" alt="Fresh Burger">
     </body>
 </html>
