--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Khirby's Burger Recipe!</h1>
+        <a href="../index.html"><b>Back to Homepage</b></a>
             <img src="../images/burger.png" alt="Fresh Burger">
     </body>
 </html>
