--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <ul>
                 <li><a href="./recipes/lumpia.html">Lumpia Recipe</a></li>
                 <li><a href="./recipes/burger.html">Burger Recipe</a></li>
+                <li><a href="./recipes/friedRice.html">Fried Rice Recipe</a></li>
             </ul>
     </body>
 </html>
