--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
         <title>Recipes</title>
     </head>
     <body>
-        <h1>Khirby's Recipes!</h1>
-            <img src="./images/kirbycooking.png" alt="Kirby cooking">
-            <h2>List of Khirby's Recipes</h2>
-            <ul>
-                <li><a href="./recipes/lumpia.html">Lumpia Recipe</a></li>
-                <li><a href="./recipes/burger.html">Burger Recipe</a></li>
-                <li><a href="./recipes/friedRice.html">Fried Rice Recipe</a></li>
-            </ul>
+        <div id="container">
+            <div id="header">
+                <h1>Khirby's Recipes!</h1>
+            </div>
+            <div id="main-image">
+                <img src="./images/kirbycooking.png" alt="Kirby cooking">
+            </div>
+            <div id="main-content">
+                <h2>List of Khirby's Recipes</h2>
+                    <ul>
+                        <li><a href="./recipes/lumpia.html">Lumpia Recipe</a></li>
+                        <li><a href="./recipes/burger.html">Burger Recipe</a></li>
+                        <li><a href="./recipes/friedRice.html">Fried Rice Recipe</a></li>
+                    </ul>
+            </div>
+        </div>
     </body>
 </html>
