--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
-        <title>Recipes</title>
+        <title>Khirby's Recipes</title>
     </head>
     <body>
         <div id="container">
@@ -14,12 +15,15 @@
                 <img src="./images/kirbycooking.png" alt="Kirby cooking">
             </div>
             <div id="main-content">
-                <h2>List of Khirby's Recipes</h2>
-                    <ul>
-                        <li><a href="./recipes/lumpia.html">Lumpia Recipe</a></li>
-                        <li><a href="./recipes/burger.html">Burger Recipe</a></li>
-                        <li><a href="./recipes/friedRice.html">Fried Rice Recipe</a></li>
-                    </ul>
+                <h2>My Recipes</h2>
+                <div class="recipe-list">
+                    <a href="./recipes/lumpia.html">
+                        <img src="./images/lumpia.jpg" alt="Lumpia">
+                    </a>
+                    <a href="./recipes/friedRice.html">
+                        <img src="./images/friedrice.png" alt="Fried Rice">
+                    </a>
+                </div>
             </div>
         </div>
     </body>
