Replace homepage main image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <h1>Khirby's Recipes!</h1>
             </div>
             <div id="main-image">
-                <img src="./images/kirbycooking.png" alt="Kirby cooking">
+                <img src="./images/kirbycooking.gif" alt="Kirby cooking">
             </div>
             <div id="main-content">
                 <h2>My Recipes</h2>
