Style homepage and lumpia recipe page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <img src="./images/lumpia.jpg" alt="Lumpia">
                     </a>
                     <a href="./recipes/friedRice.html">
-                        <img src="./images/friedrice.png" alt="Fried Rice">
+                        <img src="./images/friedrice.jpg" alt="Fried Rice">
                     </a>
                 </div>
             </div>
