--- a/recipes/friedRice.html
+++ b/recipes/friedRice.html
@@ -2,50 +2,62 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="../style.css">
         <title>Fried Rice Recipe</title> 
     </head>
     <body>
-        <h1>Khirby's Fried Rice Recipe!</h1>
-        <a href="../index.html"><b>Back to Homepage</b></a>
-            <img src="../images/friedrice.png" alt="Steamy Fried Rice">
-            <h2>Description</h2>
-            <p>
-                Fried rice has been a kitchen staple since as early as the Sui Dynasty (589–618 CE) in China. 
-                The primary reason for the continued popularity and ubiquity of this dish comes down to two 
-                things: its adaptability and the fact that people almost always cook too much rice to eat in one sitting. 
-            </p>
-            <h2>Ingredients</h2>
-                <ul>
-                    <li>3 tbsp. sesame oil, divided</li>
-                    <li>3 large eggs</li>
-                    <li>Kosher salt</li>
-                    <li>2 carrots, diced</li>
-                    <li>3 green onions, thinly sliced, white and green parts divided</li>
-                    <li>3 cloves garlic, minced</li>
-                    <li>1 tbsp. peeled and minced ginger (from a 1" piece)</li>
-                    <li>4 c. cooked long grain rice (preferably leftover)</li>
-                    <li>3/4 c. frozen peas</li>
-                    <li>3 tbsp. low-sodium soy sauce </li>
-                </ul>
-            <h2>Steps</h2>
-                <ol>
-                    <li>
-                        Heat a large cast iron skillet over high heat until very hot, about 2 minutes. 
-                        Add 1 tablespoon oil.
-                    </li>
-                    <li>
-                        Beat egg with 2 teaspoons water and a large pinch salt and add to skillet. 
-                        Cook, stirring to form large soft curds, about 30 seconds. Transfer to a plate.
-                    </li>
-                    <li>
-                        Return skillet to high heat and add 2 tablespoons oil, the carrots, and whites of the green onions. 
-                        Cook until lightly golden, about 2 minutes. Add garlic and ginger and cook, 
-                        stirring, until fragrant, 1 minute.
-                    </li>
-                    <li>
-                        Add rice, peas, and cooked eggs to skillet. Pour in soy sauce and cook, stirring until heated through, 
-                        1 minute. Season with salt and pepper and stir in the remaining green onions.
-                    </li>
-                </ol>
+        <div id="container">
+            <div id="header">
+                <h1>Fried Rice</h1>
+            </div>
+            <div id="navigation">
+                <a href="../index.html"><button>Back to Homepage</button></a>
+            </div>
+            <div id="main-image" class="recipe-image">
+                <img src="../images/friedrice.jpg" alt="Steamy Fried Rice">
+            </div>
+            <div id="main-content">
+                <h2>Description</h2>
+                <p>
+                    Fried rice has been a kitchen staple since as early as the Sui Dynasty (589–618 CE) in China. 
+                    The primary reason for the continued popularity and ubiquity of this dish comes down to two 
+                    things: its adaptability and the fact that people almost always cook too much rice to eat in one sitting. 
+                </p>
+                <h2>Ingredients</h2>
+                    <ul>
+                        <li>3 tbsp. sesame oil, divided</li>
+                        <li>3 large eggs</li>
+                        <li>Kosher salt</li>
+                        <li>2 carrots, diced</li>
+                        <li>3 green onions, thinly sliced, white and green parts divided</li>
+                        <li>3 cloves garlic, minced</li>
+                        <li>1 tbsp. peeled and minced ginger (from a 1" piece)</li>
+                        <li>4 c. cooked long grain rice (preferably leftover)</li>
+                        <li>3/4 c. frozen peas</li>
+                        <li>3 tbsp. low-sodium soy sauce </li>
+                    </ul>
+                <h2>Steps</h2>
+                    <ol>
+                        <li>
+                            Heat a large cast iron skillet over high heat until very hot, about 2 minutes. 
+                            Add 1 tablespoon oil.
+                        </li>
+                        <li>
+                            Beat egg with 2 teaspoons water and a large pinch salt and add to skillet. 
+                            Cook, stirring to form large soft curds, about 30 seconds. Transfer to a plate.
+                        </li>
+                        <li>
+                            Return skillet to high heat and add 2 tablespoons oil, the carrots, and whites of the green onions. 
+                            Cook until lightly golden, about 2 minutes. Add garlic and ginger and cook, 
+                            stirring, until fragrant, 1 minute.
+                        </li>
+                        <li>
+                            Add rice, peas, and cooked eggs to skillet. Pour in soy sauce and cook, stirring until heated through, 
+                            1 minute. Season with salt and pepper and stir in the remaining green onions.
+                        </li>
+                    </ol>
+            </div>
+        </div>
     </body>
 </html>
