Style homepage button

--- a/recipes/friedRice.html
+++ b/recipes/friedRice.html
@@ -12,7 +12,9 @@
                 <h1>Fried Rice</h1>
             </div>
             <div id="navigation">
-                <a href="../index.html"><button>Back to Homepage</button></a>
+                <a href="../index.html">
+                    <button>Back to Homepage</button>
+                </a>
             </div>
             <div id="main-image" class="recipe-image">
                 <img src="../images/friedrice.jpg" alt="Steamy Fried Rice">
