--- a/recipes/lumpia.html
+++ b/recipes/lumpia.html
@@ -12,7 +12,9 @@
                 <h1>Lumpia</h1>
             </div>
             <div id="navigation">
-                <a href="../index.html"><button>Back to Homepage</button></a>
+                <a href="../index.html">
+                    <button>Back to Homepage</button>
+                </a>
             </div>
             <div id="main-image" class="recipe-image">
                 <img src="../images/lumpia.jpg" alt="Delicious Lumpia">
